--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+@font-face {
+    font-family: 'robotoregular';
+    src: url('roboto-regular-webfont.woff2') format('woff2'),
+         url('roboto-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body{
     background-color: black;
     color: gold;
+    font-family: 'robotoregular', sans-serif;
 }
 select{
     width: 20%;
@@ -8,6 +18,11 @@ select{
 #title{
     text-align: center;
 }
+
+#thanks a, a:visited{
+    color: rgb(255, 69, 0);
+}
+
 form {
     /* Just to center the form on the page */
     margin: 0 auto;
